corrected first commit

--- a/donutshop.html
+++ b/donutshop.html
@@ -1,24 +1,90 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      body {font-family: "Helvetica";}
-      h1{text-align: center;}
-      table {}
-      table {background-color: #EEE; width: 200px;}
-    </style>
+    <link rel="stylesheet" type="text/css" href="donutshop.css">
+    <link href='https://fonts.googleapis.com/css?family=Lobster|Josefin+Slab:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <title>PDX Donuts</title>
+  <script type="text/javascript"> //variable info for each donut shop
+ var voodoo = {
+  shopName: "Voodoo Donuts",
+  minCust: "4",
+  maxCust: "37",
+  avgDon: "2",
+  HrsOp: "24"
+};
+
+var blueStar = {
+  shopName: "Blue Star Donuts",
+  minCust: "8",
+  maxCust: "43",
+  avgDon: "4.5",
+  HrsOp: "11",
+};
+
+var coco = {
+  shopName: "Coco",
+  minCust: "9",
+  maxCust: "23",
+  avgDon: "6.33",
+  HrsOp: "11",
+};
+
+var tonallis = {
+  shopName: "Tonallis Donuts & Cream",
+  minCust: "2",
+  maxCust: "28",
+  avgDon: "1.25",
+  HrsOp: "17",
+};
+
+var sesame = {
+  shopName: "Sesame Donuts",
+  minCust: "8",
+  maxCust: "58",
+  avgDon: "3.75",
+  HrsOp: "24",
+};
+var donut = new Array();
+  donut.push(voodoo);
+  donut.push(blueStar);
+  donut.push(coco);
+  donut.push(tonallis);
+  donut.push(sesame);
+</script>
   </head>
+  <header>
+  </header>
+    <div id="logo">
+    <h1>Donuts</h1>
+    <h2>of PDX</h2>
+  </div>
   <body>
-    <h1>Donut Shop</h1>
+    <section>
+    <h1>Portland's finest Donut Shops</h1>
       <table>
         <tr>
-          <td>Shop Name</td>
-          <td>Minimum Customers</td>
-          <td>Maximum Customers</td>
-          <td>Average Donuts/Customer</td>
-          <td>Hours Open</td>
+          <th>Shop Name</th>
+          <th>Minimum Customers</th>
+          <th>Maximum Customers</th>
+          <th>Average Donuts/Customer</th>
+          <th>Hours Open</th>
         </tr>
-
+        <script type="text/javascript"> //JavaScript for table
+for (var index = 0; index < donut.length; index++) {
+document.write("<tr>");
+document.write("<td>" + donut[index].shopName + "</td>");
+document.write("<td>" + donut[index].minCust + "</td>");
+document.write("<td>" + donut[index].maxCust + "</td>");
+document.write("<td>" + donut[index].avgDon + "</td>");
+document.write("<td>" + donut[index].HrsOp + "</td>");
+document.write("</tr>");
+}
+</script>
       </table>
+    </section>
+    <footer>
+      &copy; Jonathan Randall 2015
+    </footer>
   </body>
 </html>
