--- a/donutshop.html
+++ b/donutshop.html
@@ -5,52 +5,25 @@
     <link href='https://fonts.googleapis.com/css?family=Lobster|Josefin+Slab:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <title>PDX Donuts</title>
-  <script type="text/javascript"> //variable info for each donut shop
- var voodoo = {
-  shopName: "Voodoo Donuts",
-  minCust: "4",
-  maxCust: "37",
-  avgDon: "2",
-  HrsOp: "24"
-};
-
-var blueStar = {
-  shopName: "Blue Star Donuts",
-  minCust: "8",
-  maxCust: "43",
-  avgDon: "4.5",
-  HrsOp: "11",
-};
-
-var coco = {
-  shopName: "Coco",
-  minCust: "9",
-  maxCust: "23",
-  avgDon: "6.33",
-  HrsOp: "11",
-};
-
-var tonallis = {
-  shopName: "Tonallis Donuts & Cream",
-  minCust: "2",
-  maxCust: "28",
-  avgDon: "1.25",
-  HrsOp: "17",
-};
-
-var sesame = {
-  shopName: "Sesame Donuts",
-  minCust: "8",
-  maxCust: "58",
-  avgDon: "3.75",
-  HrsOp: "24",
-};
+<script>
+var donutShop = function (shopName, minCust, maxCust, avgDon, hrsOp, dayCust, donDay) {
+  this.shopName = shopName;
+  this.minCust = minCust;
+  this.maxCust = maxCust;
+  this.avgDon = avgDon;
+  this.hrsOp = hrsOp;
+  var customersPerDay = (Math.floor(Math.random() * (this.maxCust - this.minCust)) + this.minCust) * this.hrsOp;
+  this.dayCust = customersPerDay;
+  var donutPerDay = Math.ceil(this.dayCust * this.avgDon);
+  this.donDay = donutPerDay;
+  console.log(customersPerDay);
+}
 var donut = new Array();
-  donut.push(voodoo);
-  donut.push(blueStar);
-  donut.push(coco);
-  donut.push(tonallis);
-  donut.push(sesame);
+  donut.push(new donutShop("Voodoo Donuts", 4, 37, 2, 24));
+  donut.push(new donutShop("Blue Star Donuts", 8, 43, 4.5, 11));
+  donut.push(new donutShop("Coco", 9, 23, 6.33, 11));
+  donut.push(new donutShop("Tonallis Donuts & Cream", 2, 28, 1.25, 17));
+  donut.push(new donutShop("Sesame Donuts", 8, 58, 3.75, 24));
 </script>
   </head>
   <header>
@@ -69,15 +42,19 @@ var donut = new Array();
           <th>Maximum Customers</th>
           <th>Average Donuts/Customer</th>
           <th>Hours Open</th>
+          <th>Customers Per Day</th>
+          <th>Total Donuts Needed</th>
         </tr>
         <script type="text/javascript"> //JavaScript for table
-for (var index = 0; index < donut.length; index++) {
+  for (var index = 0; index < donut.length; index++) {
 document.write("<tr>");
 document.write("<td>" + donut[index].shopName + "</td>");
 document.write("<td>" + donut[index].minCust + "</td>");
 document.write("<td>" + donut[index].maxCust + "</td>");
 document.write("<td>" + donut[index].avgDon + "</td>");
-document.write("<td>" + donut[index].HrsOp + "</td>");
+document.write("<td>" + donut[index].hrsOp + "</td>");
+document.write("<td>" + donut[index].dayCust + "</td>");
+document.write("<td>" + donut[index].donDay + "</td>");
 document.write("</tr>");
 }
 </script>
