--- a/donutshop.html
+++ b/donutshop.html
@@ -12,11 +12,27 @@ var donutShop = function (shopName, minCust, maxCust, avgDon, hrsOp) {
   this.maxCust = maxCust;
   this.avgDon = avgDon;
   this.hrsOp = hrsOp;
-  var customersPerDay = (Math.floor(Math.random() * (this.maxCust - this.minCust)) + this.minCust) * this.hrsOp;
-  this.dayCust = customersPerDay;
-  var donutPerDay = Math.floor(this.dayCust * this.avgDon);
-  this.donDay = donutPerDay;
-  console.log(customersPerDay);
+  this.totCust = 0;
+  this.hours = new Array ();
+  this.customersPerHour = new Array ();
+  this.donutPerHour = new Array ();
+
+    for (var index = 0; index < this.hrsOp; index++) {
+      this.hours.push(index);
+      this.customersPerHour.push(Math.floor(Math.random() * (this.maxCust - this.minCust)) + this.minCust);
+      this.donutPerHour.push(Math.floor(this.customersPerHour[index] * this.avgDon));
+
+    }
+
+  this.writeTableData = function() {
+    var   tableRow = "<tr><td>"+this.minCust+"</td>";
+          tableRow += "<td>"+this.maxCust+"</td>";
+          tableRow += "<td>"+this.avgDon+"</td>";
+          /*tableRow += "<td>"+this.hrsOp+"</td>";
+          tableRow += "<td>"+this.dayCust+"</td>";
+          tableRow += "<td>"+this.dayDonut+"</td>*/"</tr>";
+          return tableRow;
+    }
 }
 var donut = new Array();
   donut.push(new donutShop("Voodoo Donuts", 4, 37, 2, 24));
@@ -35,33 +51,38 @@ var donut = new Array();
   <body>
     <section>
     <h1>Portland's finest Donut Shops</h1>
-      <table>
-        <tr>
-          <th>Shop Name</th>
-          <th>Minimum Customers</th>
-          <th>Maximum Customers</th>
-          <th>Average Donuts/Customer</th>
-          <th>Hours Open</th>
-          <th>Customers Per Day</th>
-          <th>Total Donuts Needed</th>
-        </tr>
         <script type="text/javascript"> //JavaScript for table
   for (var index = 0; index < donut.length; index++) {
-document.write("<tr>");
-document.write("<td>" + donut[index].shopName + "</td>");
-document.write("<td>" + donut[index].minCust + "</td>");
-document.write("<td>" + donut[index].maxCust + "</td>");
-document.write("<td>" + donut[index].avgDon + "</td>");
-document.write("<td>" + donut[index].hrsOp + "</td>");
-document.write("<td>" + donut[index].dayCust + "</td>");
-document.write("<td>" + donut[index].donDay + "</td>");
-document.write("</tr>");
+      document.write("<h2>"+donut[index].shopName+"</h2>")
+      document.write("<table>");
+      document.write("<tr>");
+      document.write("<th>Minimum Customers/Hour</th>");
+      document.write("<th>Maximum Customers/Hour</th>");
+      document.write("<th>Average Donuts/Customer</th>");
+      document.write("</tr>");
+      document.write(donut[index].writeTableData());
+      document.write("<tr>");
+      document.write("<th>Hours</th>")
+      document.write("<th>Customer/Hour</th>")
+      document.write("<th>Donuts needed</th>")
+      var totCust = 0;
+      var totDon = 0;
+      for (var hrsOp = 0; hrsOp < donut[index].hours.length; hrsOp++){
+        donut[index].hours[hrsOp] = hrsOp + 1;
+        document.write("<tr><td>"+donut[index].hours[hrsOp]+"</td>");
+        document.write("<td>"+donut[index].customersPerHour[hrsOp]+"</td>");
+        document.write("<td>"+donut[index].donutPerHour[hrsOp]+"</td></tr>");
+        totCust += donut[index].customersPerHour[hrsOp];
+        totDon += donut[index].donutPerHour[hrsOp];
+      document.write("<tr>");
+      }
+      document.write("<tr>");
+      document.write("<th>Totals for the day:</th>");
+      document.write("<th>"+totCust+"</th>");
+      document.write("<th>"+totDon+"</th>");
+      document.write("</table>");
 }
 </script>
-      </table>
     </section>
-    <footer>
-      &copy; Jonathan Randall 2015
-    </footer>
   </body>
 </html>
