--- a/donutshop.html
+++ b/donutshop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="donuttest.css">
+    <link rel="stylesheet" type="text/css" href="donutshop.css">
     <link href='https://fonts.googleapis.com/css?family=Lobster|Josefin+Slab:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <script src="shop.js"></script>
